# Easy-Crawler

./: .cproject  .project  Easy_Crawler  MY_DECLARE.h  donate.xcf  donate_alipay.xcf  gresource.c  gresource.xml  main.c  main.h  mainui.c  mainui.glade  mainui.h  mainui_setting.c  mainui_setting.glade  mainui_setting.h  makefile  meson.build  operater.c  operater.glade  operater.h  readme.md  readme.txt  task.c  task.glade  task.h  task_message.c  task_message.h  task_setting.c  task_setting.glade  task_setting.h
demo/: 贴吧内图片+内容.ecc  贴吧内图片下载.ecc
subprojects/: MyDownLoadUI  MyDownLoadUI.wrap
