project('Easy-Crawler')
gnome=import('gnome')
gsrc=gnome.compile_resources('gresource','gresource.xml')
soup_dep=dependency('libsoup-2.4')
xml_dep=dependency('libxml-2.0')
gtk_dep=dependency('gtk+-3.0')
down_ui_proj=subproject('MyDownLoadUI')
down_ui_dep=down_ui_proj.get_variable('mycurl_dep')
executable('easy-crawler',['main.c','mainui.c','mainui_setting.c','operater.c','task.c','task_message.c','task_setting.c'],gsrc,dependencies:[gtk_dep,xml_dep,soup_dep,down_ui_dep],c_args:['-w','-g'])
